[project]
authors = [{name = "walcark", email = "kevin.walcarius@cnes.fr"}]
dependencies = []
name = "simple-lumen"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
simple_lumen = { path = ".", editable = true }

[tool.pixi.tasks]
